// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxies admin requests creates reports of a repo. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 6,
    "reason": "impersonation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(2)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
]
`;

exports[`proxies admin requests fetches a list of events. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventAcknowledge",
    },
    "id": 9,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "carol.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "comment": "impersonation",
      "reportType": "com.atproto.moderation.defs#reasonOther",
    },
    "id": 6,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(2)",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventTag",
      "add": Array [
        "lang:en",
        "lang:i",
      ],
      "remove": Array [],
    },
    "id": 5,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(3)",
    "creatorHandle": "alice.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 4,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
]
`;

exports[`proxies admin requests fetches event details. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "user(1)",
  "event": Object {
    "$type": "com.atproto.admin.defs#modEventLabel",
    "comment": "[AutoModerator]: Applying labels",
    "createLabelVals": Array [
      "test-label",
      "test-label-2",
    ],
    "negateLabelVals": Array [],
  },
  "id": 2,
  "subject": Object {
    "$type": "com.atproto.admin.defs#recordView",
    "blobCids": Array [
      "cids(1)",
    ],
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "repo": Object {
      "did": "user(0)",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "moderation": Object {
        "subjectStatus": Object {
          "createdAt": "1970-01-01T00:00:00.000Z",
          "id": 1,
          "lastReportedAt": "1970-01-01T00:00:00.000Z",
          "lastReviewedAt": "1970-01-01T00:00:00.000Z",
          "lastReviewedBy": "did:example:admin",
          "reviewState": "com.atproto.admin.defs#reviewClosed",
          "subject": Object {
            "$type": "com.atproto.admin.defs#repoRef",
            "did": "user(0)",
          },
          "subjectBlobCids": Array [],
          "subjectRepoHandle": "bob.test",
          "tags": Array [
            "lang:en",
            "lang:i",
          ],
          "takendown": false,
          "updatedAt": "1970-01-01T00:00:00.000Z",
        },
      },
      "relatedRecords": Array [
        Object {
          "$type": "app.bsky.actor.profile",
          "avatar": Object {
            "$type": "blob",
            "mimeType": "image/jpeg",
            "ref": Object {
              "$link": "cids(3)",
            },
            "size": 3976,
          },
          "description": "hi im bob label_me",
          "displayName": "bobby",
        },
      ],
    },
    "uri": "record(0)",
    "value": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "../dev-env/src/seed/img/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(1)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
  },
  "subjectBlobCids": Array [],
  "subjectBlobs": Array [],
}
`;

exports[`proxies admin requests fetches moderation events. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventTag",
      "add": Array [
        "lang:und",
      ],
      "remove": Array [],
    },
    "id": 8,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventAcknowledge",
    },
    "id": 7,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
]
`;

exports[`proxies admin requests fetches record details. 1`] = `
Object {
  "blobCids": Array [],
  "blobs": Array [],
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "moderation": Object {
    "subjectStatus": Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": 4,
      "lastReviewedAt": "1970-01-01T00:00:00.000Z",
      "lastReviewedBy": "did:example:admin",
      "reviewState": "com.atproto.admin.defs#reviewClosed",
      "subject": Object {
        "$type": "com.atproto.repo.strongRef",
        "cid": "cids(0)",
        "uri": "record(0)",
      },
      "subjectBlobCids": Array [],
      "subjectRepoHandle": "bob.test",
      "tags": Array [
        "lang:und",
      ],
      "takendown": false,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  "repo": Object {
    "did": "user(0)",
    "email": "bob@test.com",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "invitedBy": Object {
      "available": 10,
      "code": "invite-code",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "admin",
      "disabled": false,
      "forAccount": "admin",
      "uses": Array [
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(1)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(2)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(0)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(3)",
        },
      ],
    },
    "invitesDisabled": true,
    "moderation": Object {
      "subjectStatus": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 1,
        "lastReportedAt": "1970-01-01T00:00:00.000Z",
        "lastReviewedAt": "1970-01-01T00:00:00.000Z",
        "lastReviewedBy": "did:example:admin",
        "reviewState": "com.atproto.admin.defs#reviewClosed",
        "subject": Object {
          "$type": "com.atproto.admin.defs#repoRef",
          "did": "user(0)",
        },
        "subjectBlobCids": Array [],
        "subjectRepoHandle": "bob.test",
        "tags": Array [
          "lang:en",
          "lang:i",
        ],
        "takendown": false,
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    },
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(1)",
          },
          "size": 3976,
        },
        "description": "hi im bob label_me",
        "displayName": "bobby",
      },
    ],
  },
  "uri": "record(0)",
  "value": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000+00:00",
    "text": "bobby boy here",
  },
}
`;

exports[`proxies admin requests fetches repo details. 1`] = `
Object {
  "did": "user(0)",
  "email": "eve@test.com",
  "handle": "eve.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "invitedBy": Object {
    "available": 1,
    "code": "invite-code",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "admin",
    "disabled": false,
    "forAccount": "user(1)",
    "uses": Array [
      Object {
        "usedAt": "1970-01-01T00:00:00.000Z",
        "usedBy": "user(0)",
      },
    ],
  },
  "invites": Array [],
  "invitesDisabled": false,
  "labels": Array [],
  "moderation": Object {},
  "relatedRecords": Array [],
}
`;

exports[`proxies admin requests searches repos. 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label-a",
            },
            Object {
              "val": "self-label-b",
            },
          ],
        },
      },
    ],
  },
]
`;

exports[`proxies admin requests takes actions and resolves reports 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "event": Object {
    "$type": "com.atproto.admin.defs#modEventAcknowledge",
  },
  "id": 7,
  "subject": Object {
    "$type": "com.atproto.repo.strongRef",
    "cid": "cids(0)",
    "uri": "record(0)",
  },
  "subjectBlobCids": Array [],
}
`;

exports[`proxies admin requests takes actions and resolves reports 2`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "event": Object {
    "$type": "com.atproto.admin.defs#modEventAcknowledge",
  },
  "id": 9,
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoRef",
    "did": "user(0)",
  },
  "subjectBlobCids": Array [],
}
`;
